--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,25 @@ input:valid + label {
 /* input[type="email"]:placeholder-shown + label {
   color: #000; Цвет лейбла, когда плейсхолдер отображается
 }  */
+
+._underline {
+  cursor: pointer;
+  position: relative;
+  color: #4299e1;
+}
+
+._default {
+  cursor: pointer;
+}
+
+._underline::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #4299e1;
+
+  transition: opacity 0.3s ease;
+}
